--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.h1 {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+}
